[SQUASH] updates from korg
* individual commits here: https://github.com/invisiblek/android_external_f2fs-tools/commits/next

Change-Id: Ibc599f353bcb4ae348e3b9647d8836baa75afe48

--- a/configure.ac
+++ b/configure.ac
@@ -57,7 +57,7 @@ PKG_CHECK_MODULES([libuuid], [uuid])
 
 # Checks for header files.
 AC_CHECK_HEADERS([linux/fs.h fcntl.h mntent.h stdlib.h string.h \
-		sys/ioctl.h sys/mount.h unistd.h])
+		sys/ioctl.h sys/mount.h unistd.h linux/falloc.h byteswap.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
@@ -71,6 +71,9 @@ AC_CHECK_FUNCS_ONCE([
 	getmntent
 	memset
 ])
+
+AS_IF([test "$ac_cv_header_byteswap_h" = "yes"],
+      [AC_CHECK_DECLS([bswap_64],,,[#include <byteswap.h>])])
 
 # Install directories
 AC_PREFIX_DEFAULT([/usr])
